--- a/index.html
+++ b/index.html
@@ -14,16 +14,64 @@
     <input type="checkbox" class="increment">
     <input type="checkbox" class="increment">
     <input type="checkbox" class="increment">
+    <input type="checkbox" class="increment">
+    <input type="checkbox" class="increment">
+    <input type="checkbox" class="increment">
+    <input type="checkbox" class="increment">
+    <input type="checkbox" class="increment">
+    <input type="checkbox" class="increment">
+    <input type="checkbox" class="increment">
+    <input type="checkbox" class="increment">
+    <input type="checkbox" class="increment">
+    <input type="checkbox" class="increment">
+    <input type="checkbox" class="increment">
+    <input type="checkbox" class="increment">
+    <input type="checkbox" class="increment">
+    <input type="checkbox" class="increment">
+    <input type="checkbox" class="increment">
+    <input type="checkbox" class="increment">
+    <input type="checkbox" class="increment">
+    <input type="checkbox" class="increment">
+    <input type="checkbox" class="increment">
+    <input type="checkbox" class="increment">
+    <input type="checkbox" class="increment">
+    <input type="checkbox" class="increment">
+    <input type="checkbox" class="increment">
+    <input type="checkbox" class="increment">
+    <input type="checkbox" class="increment">
+    <input type="checkbox" class="increment">
+    <input type="checkbox" class="increment">
+    <input type="checkbox" class="increment">
+    <input type="checkbox" class="increment">
+    <input type="checkbox" class="increment">
+    <input type="checkbox" class="increment">
+    <input type="checkbox" class="increment">
+    <input type="checkbox" class="increment">
+    <input type="checkbox" class="increment">
+    <input type="checkbox" class="increment">
+    <input type="checkbox" class="increment">
+    <input type="checkbox" class="increment">
+    <input type="checkbox" class="increment">
+    <input type="checkbox" class="increment">
+    <input type="checkbox" class="increment">
 
     <div class="shop">
-      <div>商人</div>
+      <div>商店</div>
       <div class="items">
         <div class="item1">
-          <span>Special Cookie：5枚</span>
+          <span>Special Cookie 1：5枚</span>
           <input type="checkbox" id="item1">
           <button>
-            <span>購入</span>
+            <span></span>
             <label for="item1"></label>
+          </button>
+        </div>
+        <div class="item2">
+          <span>Special Cookie 2：10枚</span>
+          <input type="checkbox" id="item2">
+          <button>
+            <span></span>
+            <label for="item2"></label>
           </button>
         </div>
       </div>
