Generate html by pug

--- a/index.html
+++ b/index.html
@@ -1,83 +1,1 @@
-<html>
-<header>
-  <link rel="stylesheet" href="./style.css">
-</header>
-<body>
-  <div class="cookie">
-    <input type="checkbox" class="increment">
-    <input type="checkbox" class="increment">
-    <input type="checkbox" class="increment">
-    <input type="checkbox" class="increment">
-    <input type="checkbox" class="increment">
-    <input type="checkbox" class="increment">
-    <input type="checkbox" class="increment">
-    <input type="checkbox" class="increment">
-    <input type="checkbox" class="increment">
-    <input type="checkbox" class="increment">
-    <input type="checkbox" class="increment">
-    <input type="checkbox" class="increment">
-    <input type="checkbox" class="increment">
-    <input type="checkbox" class="increment">
-    <input type="checkbox" class="increment">
-    <input type="checkbox" class="increment">
-    <input type="checkbox" class="increment">
-    <input type="checkbox" class="increment">
-    <input type="checkbox" class="increment">
-    <input type="checkbox" class="increment">
-    <input type="checkbox" class="increment">
-    <input type="checkbox" class="increment">
-    <input type="checkbox" class="increment">
-    <input type="checkbox" class="increment">
-    <input type="checkbox" class="increment">
-    <input type="checkbox" class="increment">
-    <input type="checkbox" class="increment">
-    <input type="checkbox" class="increment">
-    <input type="checkbox" class="increment">
-    <input type="checkbox" class="increment">
-    <input type="checkbox" class="increment">
-    <input type="checkbox" class="increment">
-    <input type="checkbox" class="increment">
-    <input type="checkbox" class="increment">
-    <input type="checkbox" class="increment">
-    <input type="checkbox" class="increment">
-    <input type="checkbox" class="increment">
-    <input type="checkbox" class="increment">
-    <input type="checkbox" class="increment">
-    <input type="checkbox" class="increment">
-    <input type="checkbox" class="increment">
-    <input type="checkbox" class="increment">
-    <input type="checkbox" class="increment">
-    <input type="checkbox" class="increment">
-    <input type="checkbox" class="increment">
-    <input type="checkbox" class="increment">
-    <input type="checkbox" class="increment">
-    <input type="checkbox" class="increment">
-    <input type="checkbox" class="increment">
-    <input type="checkbox" class="increment">
-
-    <div class="shop">
-      <div>商店</div>
-      <div class="items">
-        <div class="item1">
-          <span>Special Cookie 1：5枚</span>
-          <input type="checkbox" id="item1">
-          <button>
-            <span></span>
-            <label for="item1"></label>
-          </button>
-        </div>
-        <div class="item2">
-          <span>Special Cookie 2：10枚</span>
-          <input type="checkbox" id="item2">
-          <button>
-            <span></span>
-            <label for="item2"></label>
-          </button>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <div class="result"></div>
-</body>
-</html>
+<html><header><link rel="stylesheet" href="./style.css"/></header><body><div class="cookie"><input class="increment" type="checkbox"/><input class="increment" type="checkbox"/><input class="increment" type="checkbox"/><input class="increment" type="checkbox"/><input class="increment" type="checkbox"/><input class="increment" type="checkbox"/><input class="increment" type="checkbox"/><input class="increment" type="checkbox"/><input class="increment" type="checkbox"/><input class="increment" type="checkbox"/><input class="increment" type="checkbox"/><input class="increment" type="checkbox"/><input class="increment" type="checkbox"/><input class="increment" type="checkbox"/><input class="increment" type="checkbox"/><input class="increment" type="checkbox"/><input class="increment" type="checkbox"/><input class="increment" type="checkbox"/><input class="increment" type="checkbox"/><input class="increment" type="checkbox"/><input class="increment" type="checkbox"/><input class="increment" type="checkbox"/><input class="increment" type="checkbox"/><input class="increment" type="checkbox"/><input class="increment" type="checkbox"/><input class="increment" type="checkbox"/><input class="increment" type="checkbox"/><input class="increment" type="checkbox"/><input class="increment" type="checkbox"/><input class="increment" type="checkbox"/><input class="increment" type="checkbox"/><input class="increment" type="checkbox"/><input class="increment" type="checkbox"/><input class="increment" type="checkbox"/><input class="increment" type="checkbox"/><input class="increment" type="checkbox"/><input class="increment" type="checkbox"/><input class="increment" type="checkbox"/><input class="increment" type="checkbox"/><input class="increment" type="checkbox"/><input class="increment" type="checkbox"/><input class="increment" type="checkbox"/><input class="increment" type="checkbox"/><input class="increment" type="checkbox"/><input class="increment" type="checkbox"/><input class="increment" type="checkbox"/><input class="increment" type="checkbox"/><input class="increment" type="checkbox"/><input class="increment" type="checkbox"/><input class="increment" type="checkbox"/><div class="shop"><div>商店</div><div class="items"><div class="item1"><span>Special Cookie 1：5枚</span><input id="item1" type="checkbox"/><button><span></span><label for="item1"></label></button></div><div class="item2"><span>Special Cookie 2：10枚</span><input id="item2" type="checkbox"/><button><span></span><label for="item2"></label></button></div></div></div></div><div class="result"></div></body></html>
